# tree-sitter-plume

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-plume.h  tree-sitter-plume.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_plume/: __init__.py  binding.c
src/: grammar.json  node-types.json  parser.c
