[package]
name = "tree-sitter-plume"
description = "Plume grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "quick-check"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/plume-lang/tree-sitter-plume"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
